--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="dark"/>
+    <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="qme-SJ-SVo">
-                                <rect key="frame" x="146.66666666666666" y="226" width="100" height="400"/>
+                                <rect key="frame" x="137.5" y="133.5" width="100" height="400"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vez-N5-RXf">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -44,16 +44,24 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <variation key="heightClass=regular" axis="vertical"/>
+                                <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
                                 <variation key="heightClass=compact-widthClass=regular" axis="horizontal"/>
+                                <variation key="heightClass=regular-widthClass=compact" axis="vertical"/>
+                                <variation key="heightClass=regular-widthClass=regular" axis="vertical"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WhY-kS-Z2Z">
-                                <rect key="frame" x="146.66666666666666" y="733.66666666666663" width="100" height="34.333333333333371"/>
+                                <rect key="frame" x="137.5" y="575.5" width="100" height="41.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34.329999999999998" id="BjT-4D-r3M"/>
-                                    <constraint firstAttribute="width" constant="100" id="dAq-Fr-kzZ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="pfm-3P-ZTU"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Start" buttonSize="medium"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Start">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="23"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="buttonAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="P3J-OL-LqL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -65,6 +73,12 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WhY-kS-Z2Z" secondAttribute="bottom" constant="50" id="xp1-hw-FGU"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="N6R-9u-zJK" id="0ra-ZG-cZ3"/>
+                        <outlet property="labelButton" destination="WhY-kS-Z2Z" id="g2A-na-lGG"/>
+                        <outlet property="redLight" destination="Vez-N5-RXf" id="1se-5S-mBz"/>
+                        <outlet property="yellowLight" destination="dRZ-3G-1De" id="6Hn-OE-Orq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
